--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             </li>
                             <li>
                                 <strong>How competitive is the admission?</strong>
-                                <p>Last year we received more than 300 applications for 100 slots (however, for this year the number of available slots may be different).</p>
+                                <p>Last year we received about 300 applications for 100 slots (however, for this year the number of available slots may be different).</p>
                             </li>
                         </ul>
                     </div>
