--- a/index.html
+++ b/index.html
@@ -67,11 +67,8 @@
 	                    <li><a href="./2018/" style="opacity:0.3; font-weight:600">2018</a></li>
 	                    <li><a href="./2017/" style="opacity:0.3; font-weight:600">2017</a></li>
 	                    <li><a href="#about">About</a></li>
-	                    <li><a href="#materials">Materials</a></li>
-	                    <li><a href="#schedule">Program</a></li>
-	                    <li><a href="#speakers">People</a></li>
+	                    <li><a href="#apply">Apply</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
-	                    <li><a href="#venue">Venue</a></li>
 	                    <li><a href="#contact">Contact</a></li>
 	                </ul>
 	            </nav><!-- /.navbar-collapse -->
@@ -192,7 +189,7 @@
             </div>
         </section><!-- #about close -->
 
-        <section id="materials" class="section">
+        <section id="apply" class="section">
             <div class="container">
                 <div class="row text-center">
                         <div class="heading">
@@ -206,7 +203,7 @@
                         </div>
                 </div>
             </div>
-        </section><!-- #materials close -->
+        </section><!-- #apply close -->
         
         <!-- 
         faq start
