--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                         </div>
                         <div class="block">
                             <ol>
-                                <li>Early March: Applications open</li>
-                                <li>Late April: Applications close</li>
-                                <li>Early June: Acceptance notification</li>
+                                <li>Early February: Applications open</li>
+                                <li>Late March: Applications close</li>
+                                <li>Early May: Acceptance notification</li>
                                 <li>End of August: Summer School</li>
                             </ol>
                         </div>
@@ -225,7 +225,7 @@
                             </li>
                             <li>
                                 <strong>What is the language of the school?</strong>
-                                <p>The working language of the school is English (unlike the previous run, which was in Russian). All the lectures and practical sessions will be held in English, so the participants will need sufficient proficiency in technical English.</p>
+                                <p>The working language of the school is English. All the lectures and practical sessions will be held in English, so the participants will need sufficient proficiency in technical English.</p>
                             </li>
                             <li>
                                 <strong>What is the participation fee?</strong>
@@ -249,7 +249,7 @@
                         <ul>
                             <li>
                                 <strong>Will meals be provided?</strong>
-                                <p>We will provide coffee breaks and lunches.</p>
+                                <p>We will provide coffee breaks.</p>
                             </li>
                             <li>
                                 <strong>I do not know much about machine learning, but I would like to learn more. Should I participate in Deep|Bayes school?</strong>
