--- a/index.html
+++ b/index.html
@@ -34,57 +34,57 @@
 
     <body id="body">
 
-    	<div id="preloader">
-    		<div class="book">
-    		  <div class="book__page"></div>
-    		  <div class="book__page"></div>
-    		  <div class="book__page"></div>
-    		</div>
-    	</div>
+        <div id="preloader">
+            <div class="book">
+              <div class="book__page"></div>
+              <div class="book__page"></div>
+              <div class="book__page"></div>
+            </div>
+        </div>
 
-	    <!-- 
-	    Header start
-	    ==================== -->
-	    <div class="navbar-default navbar-fixed-top" id="navigation">
-	        <div class="container">
-	            <!-- Brand and toggle get grouped for better mobile display -->
-	            <div class="navbar-header">
-	                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-	                    <span class="sr-only">Toggle navigation</span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                </button>
-	                <a class="navbar-brand" href="#">
+        <!-- 
+        Header start
+        ==================== -->
+        <div class="navbar-default navbar-fixed-top" id="navigation">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
                         <!-- img class="logo-1" src="images/logo.png" alt="LOGO" height=50 -->
-	                    <img class="logo-2" src="images/logo-2.png" alt="LOGO" height=50>
-	                </a>
-	            </div>
+                        <img class="logo-2" src="images/logo-2.png" alt="LOGO" height=50>
+                    </a>
+                </div>
 
-	            <!-- Collect the nav links, forms, and other content for toggling -->
-	            <nav class="collapse navbar-collapse" id="navbar">
-	                <ul class="nav navbar-nav navbar-right" id="top-nav">
-	                    <li><a href="./2018/" style="opacity:0.3; font-weight:600">2018</a></li>
-	                    <li><a href="./2017/" style="opacity:0.3; font-weight:600">2017</a></li>
-	                    <li><a href="#about">About</a></li>
-	                    <li><a href="#apply">Apply</a></li>
-	                    <li><a href="#faq">FAQ</a></li>
-	                    <li><a href="#contact">Contact</a></li>
-	                </ul>
-	            </nav><!-- /.navbar-collapse -->
-	        </div><!-- /.container-fluid -->
-	    </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <nav class="collapse navbar-collapse" id="navbar">
+                    <ul class="nav navbar-nav navbar-right" id="top-nav">
+                        <li><a href="./2018/" style="opacity:0.3; font-weight:600">2018</a></li>
+                        <li><a href="./2017/" style="opacity:0.3; font-weight:600">2017</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#apply">Apply</a></li>
+                        <li><a href="#faq">FAQ</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </div>
 
-	    <section id="hero-area">
-	        <div class="container">
-	            <div class="row">
-	                <div class="col-md-8">
-	                    <div class="block">
-	                        <h1 class="wow fadeInDown">Summer school on <br/><span>Deep Learning</span> and <br/><span>Bayesian Methods</span></h1>
-	                        <p class="wow fadeInDown" data-wow-delay="0.3s">August 2019, Moscow, Russia</p>
-	                    </div>
-	                </div>
-	                <div class="col-md-4 zoomIn">
+        <section id="hero-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="block">
+                            <h1 class="wow fadeInDown">Summer school on <br/><span>Deep Learning</span> and <br/><span>Bayesian Methods</span></h1>
+                            <p class="wow fadeInDown" data-wow-delay="0.3s">August 20&ndash;25, 2019, Moscow, Russia</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 zoomIn">
                         <div class="organizer">
                             <h5>Organized by</h5>
 
@@ -104,10 +104,10 @@
                                 <p>Bayesian Methods Research Group</p>
                             </div>
                         </div>
-	                </div>
-	            </div><!-- .row close -->
-	        </div><!-- .container close -->
-	    </section><!-- header close -->
+                    </div>
+                </div><!-- .row close -->
+            </div><!-- .container close -->
+        </section><!-- header close -->
 
         <!-- 
         About start
@@ -120,7 +120,7 @@
                     </div>
                     <div class="block">
                         <p>
-                            At Deep|Bayes summer school, we will discuss how Bayesian Methods can be combined with Deep Learning and lead to better results in machine learning applications. Recent research has proven that the use of Bayesian approach can be beneficial in various ways. School participants will learn methods and techniques that are crucial for understanding current research in machine learning. They will also have an opportunity to draw connections between Bayesian Methods and Reinforcements Learning, learn modern stochastic optimization methods and regularization techniques for neural networks. Lectures will be followed by practical sessions.
+                            At Deep|Bayes summer school, we will discuss how Bayesian Methods can be combined with Deep Learning and lead to better results in machine learning applications. Recent research has proven that the use of Bayesian approach can be beneficial in various ways. School participants will learn methods and techniques that are crucial for understanding current research in machine learning. They will also have hands-on experience with using probabilistic modeling to build neural generative and discriminative models, learn modern stochastic optimization methods and regularization techniques for neural networks, and learn the ways to reason about the uncertainty about the weight of the neural networks and their predictions. Lectures will be followed by practical sessions.
                         </p>
                     </div>
                 </div>
@@ -163,12 +163,13 @@
                             <li>Why are Bayesian methods useful (in machine learning and everyday life)? What is randomness, indeed?</li> 
                             <li>Latent Variable Models. How to train a model able to discover patterns unknown before training?</li> 
                             <li>Scalable probabilistic models. Why can it be useful to turn a probabilistic inference problem into an optimization problem?</li> 
-                            <li>The connection between Reinforcement Learning and Bayesian methods. How to train stochastic computational graphs?</li>
                             <li>Automatic Dropout rate tuning. Do neural networks overfit? (spoiler: well, yes)</li>
+                            <li>How to train an infinite ensemble of neural networks using the same amount of memory?</li>
                             <li>Stochastic optimization. How to optimize a function faster than computing  its value at one point?</li>
+                            <li>How to apply well-established probabilistic modeling tools such as MCMC and Gaussian processes to modern large-scale problems?</li>
                         </ul>
 
-                        <p>Our goal is to show that using the Bayesian approach in deep neural networks can expand the range of their applicability and improve their performance. Although there are many different problem settings in machine learning, probabilistic inference for Bayesian networks can be performed  in a similar way for most of them. Do you want to learn more about these methods? Come to our summer school!</p>
+                        <p>Our goal is to show that using the Bayesian approach in deep learning models can expand the range of their applicability and improve their performance. Although there are many different problem settings in machine learning, probabilistic inference for Bayesian networks can be performed  in a similar way for most of them. Do you want to learn more about these methods? Come to our summer school!</p>
                     </div>
                 </div>
 
@@ -178,10 +179,10 @@
                         </div>
                         <div class="block">
                             <ol>
-                                <li>Early February: Applications open</li>
-                                <li>Late March: Applications close</li>
-                                <li>Early May: Acceptance notification</li>
-                                <li>End of August: Summer School</li>
+                                <li>February 16: Applications open</li>
+                                <li>April 15, 23:59 Moscow Time (GMT+3): Applications close</li>
+                                <li>May 1: Acceptance notification</li>
+                                <li>August 20&ndash;25: Summer School</li>
                             </ol>
                         </div>
                     </div>
