Application form + minor css edits

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                         <div class="organizer">
                             <h5>Organized by</h5>
 
+							<div class="logo-box">
+                                <a href="https://hse.ru/" target="_blank"><img src="images/hse.png" width="150" /></a>
+                            </div>
+                            <hr/>
+
                             <div class="logo-box">
                                 <a href="https://research.samsung.com/aicenter_moscow" target="_blank"><img src="images/samsung.png" /></a>
                             </div>
@@ -197,9 +202,9 @@
                         </div>
                         <div class="block">
                             <p>
-                            Applications are not open yet. Subscribe to be notified when they do.
+                            Applications are now <strong>open</strong>! Apply until April 15, 23:59 Moscow Time (UTC+3) 
                             </p>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScdaZ-hPxSbbnH353RbfaUyeYzZosvOsyxFTqAqTMvmO_BsUQ/viewform?usp=sf_link" target="_blank" class="btn btn-default btn-home">Subscribe</a>
+                            <a href="https://goo.gl/forms/dKbuQfTQK5H5y1l22" target="_blank" class="btn btn-home">Application Form</a>
                         </div>
                 </div>
             </div>
