--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Deep|Bayes – Summer school on Deep Learning and Bayesian Methods</title>
         <meta name="description" content="Summer school on Deep Learning and Bayesian Methods. Russia, Moscow, August 2019" />
 
-        <meta property="og:title" content="Summer school Deep|Bayes" />
-        <meta property="og:description" content="Summer school on Deep Learning and Bayesian Methods. Russia, Moscow, August 2019" />
+        <meta property="og:title" content="Summer School Deep|Bayes. Russia, Moscow, August 2019" />
+        <meta property="og:description" content="At the Deep|Bayes summer school, we will discuss how Bayesian Methods can be combined with Deep Learning and lead to better results in machine learning applications. Recent research has proven that the use of Bayesian approach can be beneficial in various ways. School participants will learn methods and techniques that are crucial for understanding current research in machine learning. They will also have hands-on experience with using probabilistic modeling to build neural generative and discriminative models, learn modern stochastic optimization methods and regularization techniques for neural networks, and master the ways to reason about the uncertainty about the weight of the neural networks and their predictions. Lectures will be followed by practical sessions." />
         <meta property="og:image" content="http://deepbayes.ru/images/school-logo.png" />
 
         <meta name="twitter:card" content="summary_large_image" />
@@ -125,7 +125,7 @@
                     </div>
                     <div class="block">
                         <p>
-                            At Deep|Bayes summer school, we will discuss how Bayesian Methods can be combined with Deep Learning and lead to better results in machine learning applications. Recent research has proven that the use of Bayesian approach can be beneficial in various ways. School participants will learn methods and techniques that are crucial for understanding current research in machine learning. They will also have hands-on experience with using probabilistic modeling to build neural generative and discriminative models, learn modern stochastic optimization methods and regularization techniques for neural networks, and learn the ways to reason about the uncertainty about the weight of the neural networks and their predictions. Lectures will be followed by practical sessions.
+                            At Deep|Bayes summer school, we will discuss how Bayesian Methods can be combined with Deep Learning and lead to better results in machine learning applications. Recent research has proven that the use of Bayesian approach can be beneficial in various ways. School participants will learn methods and techniques that are crucial for understanding current research in machine learning. They will also have hands-on experience with using probabilistic modeling to build neural generative and discriminative models, learn modern stochastic optimization methods and regularization techniques for neural networks, and master the ways to reason about the uncertainty about the weight of the neural networks and their predictions. Lectures will be followed by practical sessions.
                         </p>
                     </div>
                 </div>
