--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <ul>
                             <li>
                                 <strong>How do I apply?</strong>
-                                <p>The application is closed now. Stay tuned for the next run of the school!</p>
+                                <p>Fill out the form in the <a href="#apply">Apply</a> section.</p>
                             </li>
                             <li>
                                 <strong>What is the language of the school?</strong>
