--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             </li>
                             <li>
                                 <strong>I live outside Moscow. Can I still participate?</strong>
-                                <p>Yes, if you get selected. We will provide a limited number of travel grants partially covering a trip to and from Moscow and accommodation for the time of the summer school.</p>
+                                <p>Yes, if you get selected. We will provide a limited number of travel grants. The amount of the travel grant is fixed (no matter from which country the participant comes). Travel grant can be spent to cover a trip to and from Moscow and accommodation for the time of the summer school.</p>
                             </li>
                             <li>
                                 <strong>What about lectures live streaming?</strong>
