2019 Program + invited speakers + cleanup

--- a/index.html
+++ b/index.html
@@ -209,6 +209,136 @@
                 </div>
             </div>
         </section><!-- #apply close -->
+
+        <section id="schedule" class="section">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="sub-heading">
+                        <h2>Program</h2>
+                    </div>
+                    <div class="block">
+                        <p><a href="images/schedule.png"><img src="images/schedule.png" style="width:800px; max-width:100%" /></a></p>
+                        <p>
+                           A pdf version of the school's program can be found <a href="./files/schedule-2019.pdf">here</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section><!-- #speakers close -->
+
+        <!-- 
+        Lecturers start
+        ==================== -->
+        <section id="speakers" class="section">
+            <div class="container">
+                <div class="sub-heading">
+                    <h2>People</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                    <p>Most of our lecturers and tutors are members of the <a href="http://bayesgroup.ru" target="_blank">Bayesian Methods Research Group</a> and researchers from the world’s leading  research centers. Many school lecturers have published at top international machine learning conferences such as NIPS, ICML, ICCV, CVPR, ICLR, AISTATS, and others. 
+                            
+                    Today, the Bayesian Methods Research group is one of the leading machine learning research groups in Russia. Members of the group have developed a range of university courses in Bayesian Methods, Deep Learning, Optimization and Probabilistic Graphical Models and have substantial teaching experience.  
+                    Our research group is actively collaborating with such companies as Samsung Electronics, Yandex, SberTech, Kaspersky, Schlumberger, and others.
+                    </p>
+                    </div>
+                </div>
+
+                <div class="sub-heading">
+                    <h2>Invited Speakers</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4 col-md-4">
+                        <div class="photo">
+                            <img src="photos/quadrianto.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://users.sussex.ac.uk/~nq28/" target="_blank">Novi Quadrianto</a></span><br/>
+                            <span class="job-affiliation">University of Sussex</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="photo">
+                            <img src="photos/filippone.jpg" />
+                        </div>
+                        <div class="info">
+                           <span class="speaker-name"><a href="http://www.eurecom.fr/~filippon/" target="_blank">Maurizio Filippone</a></span><br/>
+                           <span class="job-affiliation">EURECOM</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="photo">
+                            <img src="photos/ruiz.jpg" />
+                        </div>
+                        <div class="info">
+                           <span class="speaker-name"><a href="https://franrruiz.github.io/" target="_blank">Francisco Jesus Rodriguez Ruiz</a></span><br/>
+                           <span class="job-affiliation">Columbia University, University of Cambridge</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="photo">
+                            <img src="photos/bartunov.jpg" />
+                        </div>
+                        <div class="info">
+                           <span class="speaker-name">Sergey Bartunov</span><br/>
+                           <span class="job-affiliation">DeepMind</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="photo">
+                            <img src="photos/malinin.jpg" />
+                        </div>
+                        <div class="info">
+                           <span class="speaker-name"><a href="http://mi.eng.cam.ac.uk/~am969/">Andrey Malinin</a></span><br/>
+                           <span class="job-affiliation">University of Cambridge</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub-heading">
+                    <h2>Organizing Committee</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/vetrov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/staff/dvetrov" target="_blank">Dmitry Vetrov</a></span><br/>
+                            Head of the School 
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/chirkova.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191576735" target="_blank">Nadezhda Chirkova</a></span><br/>
+                            Organization Manager
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/lobacheva.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/131072080" target="_blank">Ekaterina Lobacheva</a></span><br/>
+                            Organization Manager
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/volzhenina.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/216971953" target="_blank">Ekaterina Volzhenina</a></span><br/>
+                            Organization Manager
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section><!-- #speakers close -->
         
         <!-- 
         faq start
