Added lecturers and teching fellows

--- a/index.html
+++ b/index.html
@@ -296,6 +296,153 @@
                 </div>
 
                 <div class="sub-heading">
+                    <h2>Lecturers</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/vetrov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/staff/dvetrov" target="_blank">Dmitry Vetrov</a></span><br/>
+                            Research Professor, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/kropotov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name">Dmitry Kropotov</span><br/>
+                            Researcher, <span class="job-affiliation">Lomonosov Moscow State University</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/burnaev.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://faculty.skoltech.ru/people/evgenyburnaev" target="_blank">Evgeny Burnaev</a></span><br/>
+                            Associate Professor, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/ulyanov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://sites.skoltech.ru/compvision/members/dmitry-ulyanov/" target="_blank">Dmitry Ulyanov</a></span><br/>
+                            PhD student, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/neklyudov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191263008" target="_blank">Kirill Neklyudov</a></span><br/>
+                            Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/molchanov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/205487138" target="_blank">Dmitry Molchanov</a></span><br/>
+                            Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/ashuha.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://ars-ashuha.ru/" target="_blank">Arsenii Ashukha</a></span><br/>
+                            <span class="job-title">PhD Candidate</span>, <span class="job-affiliation">University of Amsterdam</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/sobolev.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://artem.sobolev.name/" target="_blank">Artem Sobolev</a></span><br/>
+                            Research Scientist, <span class="job-affiliation">Samsung AI Center</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub-heading">
+                    <h2>Teaching Fellows</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/struminsky.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/165140955" target="_blank">Kirill Struminsky</a></span><br/>
+                            <span class="job-title">PhD student</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/ashuha.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://ars-ashuha.ru/" target="_blank">Arsenii Ashukha</a></span><br/>
+                            <span class="job-title">PhD Candidate</span>, <span class="job-affiliation">University of Amsterdam</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/ulyanov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="http://sites.skoltech.ru/compvision/members/dmitry-ulyanov/" target="_blank">Dmitry Ulyanov</a></span><br/>
+                            <span class="job-title">PhD student</span>, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/neklyudov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/191263008" target="_blank">Kirill Neklyudov</a></span><br/>
+                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/molchanov.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/205487138" target="_blank">Dmitry Molchanov</a></span><br/>
+                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/kapushev.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://faculty.skoltech.ru/people/yermekkapushev" target="_blank">Yermek Kapushev</a></span><br/>
+                            PhD student, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/yanush.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name">Viktor Yanush</span><br/>
+                            MSc Student, <span class="job-affiliation">Lomonosov Moscow State University</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub-heading">
                     <h2>Organizing Committee</h2>
                 </div>
                 <div class="row">
