Fix Ars' affiliation one more time

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name"><a href="http://ars-ashuha.ru/" target="_blank">Arsenii Ashukha</a></span><br/>
-                            <span class="job-title">PhD Candidate</span>, <span class="job-affiliation">University of Amsterdam</span>
+                            <span class="job-title">Research Scientist</span>, <span class="job-affiliation">Samsung AI Center</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
