--- a/index.html
+++ b/index.html
@@ -202,9 +202,8 @@
                         </div>
                         <div class="block">
                             <p>
-                            Applications are now <strong>open</strong>! Apply until April 15, 23:59 Moscow Time (UTC+3) 
+                            Applications are now <strong>closed</strong>. Come back next year and/or watch videos from the last year in the meantime.
                             </p>
-                            <a href="https://goo.gl/forms/dKbuQfTQK5H5y1l22" target="_blank" class="btn btn-home">Application Form</a>
                         </div>
                 </div>
             </div>
