--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="photo">
-                            <img src="photos/ulyanov.jpg" />
+                            <img src="photos/zakharov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name"><a href="http://sites.skoltech.ru/compvision/members/dmitry-ulyanov/" target="_blank">Dmitry Ulyanov</a></span><br/>
-                            PhD student, <span class="job-affiliation">Skoltech</span>
+                            <span class="speaker-name">Egor Zakharov</span><br/>
+                            <span class="job-affiliation">Samsung AI Center, Moscow</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -386,6 +386,15 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="photo">
+                            <img src="photos/lobacheva.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/131072080" target="_blank">Ekaterina Lobacheva</a></span><br/>
+                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
                             <img src="photos/ashuha.jpg" />
                         </div>
                         <div class="info">
@@ -395,11 +404,11 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="photo">
-                            <img src="photos/ulyanov.jpg" />
+                            <img src="photos/zakharov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name"><a href="http://sites.skoltech.ru/compvision/members/dmitry-ulyanov/" target="_blank">Dmitry Ulyanov</a></span><br/>
-                            <span class="job-title">PhD student</span>, <span class="job-affiliation">Skoltech</span>
+                            <span class="speaker-name">Egor Zakharov</span><br/>
+                            <span class="job-affiliation">Samsung AI Center, Moscow</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -444,7 +453,7 @@
                     <h2>Organizing Committee</h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-2">
                         <div class="photo">
                             <img src="photos/vetrov.jpg" />
                         </div>
@@ -462,7 +471,7 @@
                             Organization Manager
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-2">
                         <div class="photo">
                             <img src="photos/lobacheva.jpg" />
                         </div>
@@ -477,6 +486,15 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name"><a href="https://www.hse.ru/en/org/persons/216971953" target="_blank">Ekaterina Volzhenina</a></span><br/>
+                            Organization Manager
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-2">
+                        <div class="photo">
+                            <img src="photos/voronkova.jpg" />
+                        </div>
+                        <div class="info">
+                            <span class="speaker-name">Darya Voronkova</span><br/>
                             Organization Manager
                         </div>
                     </div>
