--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
                             <img src="photos/zakharov.jpg" />
                         </div>
                         <div class="info">
-                            <span class="speaker-name">Egor Zakharov</span><br/>
-                            <span class="job-affiliation">Samsung AI Center, Moscow</span>
+                            <span class="speaker-name"><a href="https://scholar.google.com/citations?user=wyF-PxIAAAAJ&hl=en">Egor Zakharov</a></span><br/>
+                            Engineer, <span class="job-affiliation">Samsung AI Center, Moscow</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
