--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                         <ul>
                             <li>
                                 <strong>Will meals be provided?</strong>
-                                <p>We will provide coffee breaks.</p>
+                                <p>We will provide coffee breaks and lunches.</p>
                             </li>
                             <li>
                                 <strong>I do not know much about machine learning, but I would like to learn more. Should I participate in Deep|Bayes school?</strong>
