--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#apply">Apply</a></li>
                         <li><a href="#faq">FAQ</a></li>
-			<li><a href="#venue">Venue</a></li>
+			            <li><a href="./attendees/">Attendees Information</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav><!-- /.navbar-collapse -->
@@ -576,23 +576,6 @@
                 </div>
             </div>
         </section><!-- #faq close -->
-
-        <!-- 
-        Venue start
-        ==================== -->
-        <section id="venue" class="section">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="heading">
-                        <h2>Venue</h2>
-                    </div>
-                    <div class="block">
-                        <p>The School will be held at the InLiberty space at <a href="https://yandex.com/maps/213/moscow/?ll=37.568813%2C55.763357&mode=search&oid=219665386921&ol=biz&where=37.569135%2C55.763234&z=18.7" target="_blank">Stolyarnyy Pereulok, 3/1, Moscow</a> near the metro station "Ulitsa 1905 goda" (Purple line)</p>
-                        <p><a href="https://yandex.com/maps/213/moscow/?ll=37.568813%2C55.763357&mode=search&oid=219665386921&ol=biz&where=37.569135%2C55.763234&z=18.7"><img src="images/map.jpg" style="width:800px; max-width:100%" /></a></p>
-                    </div>
-                </div>
-            </div><!-- .container close -->
-</section><!-- #venue close -->
 
         <!-- 
         Contacts start
