--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#apply">Apply</a></li>
                         <li><a href="#faq">FAQ</a></li>
-			            <li><a href="./attendees/">Attendees Information</a></li>
+			            <li><a href="./attendees/">Attendee Information</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav><!-- /.navbar-collapse -->
