--- a/attendees/index.html
+++ b/attendees/index.html
@@ -81,7 +81,7 @@
         <section id="attendees" class="section">
             <div class="container">
                 <div class="row">
-                        <h2>Attendees Information</h2>
+                        <h2>Attendee Information</h2>
                     <div class="block">
                         <p>During summer school, we will discuss quite advanced topics of Bayesian Deep Learning. The school lasts only 6 days, and we do not have enough time for a detailed introduction into basic Bayesian Methods and Deep Learning. That's why we expect you to come with the knowledge of some basic concepts. </p>
                         <p>Below we present a checklist of concepts which you have to be familiar with <strong>before</strong> the summer school. We also provide links to the materials on these topics. We <strong>recommend studying</strong> the materials on concepts you are not familiar with. Otherwise, it will be hard for you to follow the school lectures.</p>
