Update tourist information

--- a/attendees/index.html
+++ b/attendees/index.html
@@ -249,10 +249,11 @@
                     </div>
                     <div class="block">
                         <ul>
-                            <li>Bank cards are accepted almost everywhere, including public transport</li>
+                            <li> Please check the weather forecast before the school. A warm sweater may be needed. </li>
+			    <li>Bank cards are accepted almost everywhere, including public transport</li>
                             <li>To get from the airport, you can use Aeroexpress, taxi (see above) or bus. When called using a mobile app, the taxi may cost not much more than Aeroexpress. The bus goes to the nearest metro station, and it is the cheapest option.</li>
                             <li>To get cheaper tickets for public transport, buy Troika card. Find more information about tickets <a href="http://news.metro.ru/useeng.html">here</a>.</li>
-                            <li>Do not forget to purchase travel insurance.</li>
+                            <li>Do not forget to purchase medical insurance.</li>
                             <li>Mobile data plans are very cheap in Russia compared to the rest of the world. If you'd like to get yourself a local SIM card, <a href="https://prepaid-data-sim-card.fandom.com/wiki/Russia">this guide</a> might be useful.</li>
                         </ul>
                     </div>
