--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name"><a href="http://users.sussex.ac.uk/~nq28/" target="_blank">Novi Quadrianto</a></span><br/>
-                            <span class="job-affiliation">University of Sussex</span>
+                            <span class="job-affiliation">Higher School of Economics, University of Sussex</span>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-4">
