--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <h2>Program</h2>
                     </div>
                     <div class="block">
-                        <p><a href="images/schedule.png"><img src="images/schedule.png" style="width:800px; max-width:100%" /></a></p>
+                        <p><a href="./files/schedule-2019.pdf"><img src="images/schedule.png" style="width:800px; max-width:100%" /></a></p>
                         <p>
                            A pdf version of the school's program can be found <a href="./files/schedule-2019.pdf">here</a>.
                         </p>
