--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li><a href="./2018/" style="opacity:0.3; font-weight:600">2018</a></li>
                         <li><a href="./2017/" style="opacity:0.3; font-weight:600">2017</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#apply">Apply</a></li>
+                        <li><a href="#materials">Materials</a></li>
                         <li><a href="#faq">FAQ</a></li>
 			            <li><a href="./attendees/">Attendees Information</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -195,16 +195,19 @@
             </div>
         </section><!-- #about close -->
 
-        <section id="apply" class="section">
+        <section id="materials" class="section">
             <div class="container">
                 <div class="row text-center">
                         <div class="heading">
-                            <h2>Apply</h2>
+                            <h2>Materials</h2>
                         </div>
                         <div class="block">
                             <p>
-                            Applications are now <strong>closed</strong>. Come back next year and/or watch videos from the last year in the meantime.
+                            The school is over, but look what've got here:
                             </p>
+                            <a href="https://www.youtube.com/playlist?list=PLe5rNUydzV9QHe8VDStpU0o8Yp63OecdW" target="_blank" class="btn btn-default btn-home">Videos</a>
+                            <a href="https://github.com/bayesgroup/deepbayes-2019/tree/master/lectures" target="_blank" class="btn btn-default btn-home">Slides</a>
+                            <a href="https://github.com/bayesgroup/deepbayes-2019/tree/master/seminars" target="_blank" class="btn btn-default btn-home">Assignments</a>
                         </div>
                 </div>
             </div>
