Applications are open

--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                         <li><a href="./2018/" style="opacity:0.3; font-weight:600">2018</a></li>
                         <li><a href="./2017/" style="opacity:0.3; font-weight:600">2017</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#materials">Materials</a></li>
+                        <li><a href="#apply">Apply</a></li>
                         <li><a href="#faq">FAQ</a></li>
-			            <li><a href="./attendees/">Attendee Information</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav><!-- /.navbar-collapse -->
@@ -195,6 +194,22 @@
                 
             </div>
         </section><!-- #about close -->
+
+        <section id="apply" class="section">
+            <div class="container">
+                <div class="row text-center">
+                        <div class="heading">
+                            <h2>Apply</h2>
+                        </div>
+                        <div class="block">
+                            <p>
+                            Applications are <strong>open</strong> until April 15, 23:59 Moscow Time (GMT+3).
+                            </p>
+                            <a href="https://forms.gle/Lw933hcyorqR26rr7" target="_blank" class="btn btn-home">Application Form</a>
+                        </div>
+                </div>
+            </div>
+        </section><!-- #apply close -->
 
         <!-- 
         Lecturers start
